# pc-governo-analise-historica

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  achados.html  app.js  data.json  defesa.html  index.html  insights.html  municipios.html  pareceres.html  pyproject.toml  secoes.html  style.css
data/: final.json
docs/: guia-revisao-csv.md
docs/superpowers/plans/: 2026-05-16-extracao-pdfs-2023.md  2026-05-16-melhorias-pipeline.md  2026-05-16-site-v3.md  2026-05-17-visao-geral-kpis.md
docs/superpowers/specs/: 2026-05-16-extracao-pdfs-2023-design.md  2026-05-16-melhorias-pipeline-design.md  2026-05-16-site-v3-design.md  2026-05-17-visao-geral-kpis-design.md
site/: _partials.html  achados.html  app.js  data.json  defesa.html  index.html  insights.html  municipios.html  pareceres.html  secoes.html  sobre.html  style.css
site-v3/: achados.html  app.js  data.json  defesa.html  index.html  insights.html  mockup-modal-v2.html  mockup-modal.html  municipios.html  pareceres.html  secoes.html  sobre.html  style.css
src/: build_site.py  cache.py  cli.py  enrich.py  extract_text.py  parse_2024.py  parse_contraditorio.py  parse_legacy.py  planilha_pc.py  rate_limit.py  review.py  schema.py
tests/: test_enrich.py  test_parse_2024.py  test_rate_limit.py  test_review.py
