[project]
name = "pc-governo-analise-historica"
version = "1.1.0"
description = "Portal de prestações de contas + Banco de Achados (TCE-AL)"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "pypdf>=4.3.0",
    "pydantic>=2.7.0",
    "google-genai>=1.0.0",
    "pandas>=2.2.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "openpyxl>=3.1.5",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
